--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,7 @@
                             type="text" 
                             id="apiUrl" 
                             class="setting-input" 
-                            value="http://localhost:8000"
+                            value="https://vision-guide-1hu4.onrender.com/"
                             placeholder="http://localhost:8000"
                         >
                     </div>
